// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     distinct filtered 
    expenses
     totalling 
    $4.70
    .
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     distinct filtered 
    expense
     totalling 
    $2.35
    .
  </h1>
</div>
`;
